c4prj2_input/grade.txt
Grading at Wed Apr  3 06:55:32 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:76:12: error: redefinition of ‘arr’
   deck_t **arr=NULL;
            ^
input.c:74:13: note: previous definition of ‘arr’ was here
   deck_t ** arr = malloc(sizeof(**arr));
             ^
Compilation of input.c failed

Overall Grade: F
